gcc/gcc/testsuite/gcc.apple/objc-negtest.c
/* APPLE LOCAL begin radar 4122328 */
/* { dg-options "-fasm-blocks" } */
@class NSString; /* { dg-error "(parse|syntax) error before '@' token" } */

int main()
{
}
/* APPLE LOCAL end radar 4122328 */
